--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-feather": "^2.0.10",
-    "react-hook-form": "^7.53.0"
+    "react-hook-form": "^7.53.0",
     "react-dom": "^18"
   },
   "devDependencies": {
@@ -29,7 +29,7 @@
     "@types/react-dom": "^18",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
