--- a/package.json
+++ b/package.json
@@ -11,25 +11,21 @@
   "dependencies": {
     "@headlessui/react": "^2.1.5",
     "@heroicons/react": "^2.1.5",
-    "heroicons": "^2.1.5",
-    "next": "14.2.8",
     "@next-auth/firebase-adapter": "^2.0.1",
     "firebase": "^10.13.1",
+    "heroicons": "^2.1.5",
     "next": "14.2.8",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "react-feather": "^2.0.10",
-    "react-hook-form": "^7.53.0",
-    "react-dom": "^18"
+    "react-hook-form": "^7.53.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
